--- a/nativeTest-linux/package.json
+++ b/nativeTest-linux/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "CC0",
+  "license": "CC0-1.0",
   "os": [
     "linux"
   ]
