--- a/nativeTest/package.json
+++ b/nativeTest/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "CC0",
+  "license": "CC0-1.0",
   "optionalDependencies": {
     "nativetest-linux": "https://gitpkg.now.sh/Hotspring-r/PlatformSpecificPackageTest/nativeTest-linux?main",
     "nativetest-win": "https://gitpkg.now.sh/Hotspring-r/PlatformSpecificPackageTest/nativeTest-win?main"
